// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`lexer bold should be deep tokenized 1`] = `
Array [
  Object {
    "indent": 0,
    "raw": "**bold with \`code\` and *italics* and ~~strikes~~ and [link](https://kiranparajuli.com.np)**",
    "type": "paragraph",
    "value": "**bold with \`code\` and *italics* and ~~strikes~~ and [link](https://kiranparajuli.com.np)**",
  },
]
`;

exports[`lexer bold should match the consecutive occurrences 1`] = `
Array [
  Object {
    "indent": 0,
    "raw": "**first bold** **second bold** **third bold**",
    "type": "paragraph",
    "value": "**first bold** **second bold** **third bold**",
  },
]
`;

exports[`lexer code should match the consecutive occurrences 1`] = `
Array [
  Object {
    "indent": 0,
    "raw": "\`first code\` \`second code\` \`third code\`",
    "type": "paragraph",
    "value": "\`first code\` \`second code\` \`third code\`",
  },
]
`;

exports[`lexer code should not be deep tokenized 1`] = `
Array [
  Object {
    "indent": 0,
    "raw": "\`code with ~ gem and **bold** and *italics* and [link](https://kiranparajuli.com.np)\`",
    "type": "paragraph",
    "value": "\`code with ~ gem and **bold** and *italics* and [link](https://kiranparajuli.com.np)\`",
  },
]
`;

exports[`lexer codeblock should cope with multiple items 1`] = `
Array [
  Object {
    "indent": 0,
    "language": "js",
    "type": "code-block",
    "value": "const a = 1",
  },
  Object {
    "indent": 0,
    "raw": "some people are funny",
    "type": "paragraph",
    "value": "some people are funny",
  },
]
`;

exports[`lexer codeblock should parse multiple consequetive codeblocks 1`] = `
Array [
  Object {
    "indent": 0,
    "language": "js",
    "type": "code-block",
    "value": "const a = 1",
  },
  Object {
    "indent": 0,
    "language": "js",
    "type": "code-block",
    "value": "const b = 2",
  },
]
`;

exports[`lexer codeblock should parse the codeblock 1`] = `
Array [
  Object {
    "indent": 0,
    "language": "js",
    "type": "code-block",
    "value": "const a = 1",
  },
]
`;

exports[`lexer codeblock should parse the codeblock with multiple lines 1`] = `
Array [
  Object {
    "indent": 0,
    "language": "js",
    "type": "code-block",
    "value": "const a = 1
const b = 2",
  },
]
`;

exports[`lexer codeblock should parse the codeblock with multiple lines and a newline 1`] = `
Array [
  Object {
    "indent": 0,
    "language": "js",
    "type": "code-block",
    "value": "const a = 1
const b = 2

const c = 3",
  },
]
`;

exports[`lexer codeblock should parse the codeblock without the language 1`] = `
Array [
  Object {
    "indent": 0,
    "language": null,
    "type": "code-block",
    "value": "const a = 1",
  },
]
`;

exports[`lexer common tokens should parse the common tokens 1`] = `
Array [
  Object {
    "indent": 0,
    "level": 1,
    "raw": "# Heading One Text",
    "type": "heading",
    "value": "Heading One Text",
  },
]
`;

exports[`lexer common tokens should parse the common tokens 2`] = `
Array [
  Object {
    "indent": 0,
    "level": 2,
    "raw": "## Heading Two Text",
    "type": "heading",
    "value": "Heading Two Text",
  },
]
`;

exports[`lexer common tokens should parse the common tokens 3`] = `
Array [
  Object {
    "indent": 0,
    "level": 3,
    "raw": "### Heading Three Text",
    "type": "heading",
    "value": "Heading Three Text",
  },
]
`;

exports[`lexer common tokens should parse the common tokens 4`] = `
Array [
  Object {
    "indent": 0,
    "level": 4,
    "raw": "#### Heading Four Text",
    "type": "heading",
    "value": "Heading Four Text",
  },
]
`;

exports[`lexer common tokens should parse the common tokens 5`] = `
Array [
  Object {
    "indent": 0,
    "level": 5,
    "raw": "##### Heading Five Text",
    "type": "heading",
    "value": "Heading Five Text",
  },
]
`;

exports[`lexer common tokens should parse the common tokens 6`] = `
Array [
  Object {
    "indent": 0,
    "level": 6,
    "raw": "###### Heading Six Text",
    "type": "heading",
    "value": "Heading Six Text",
  },
]
`;

exports[`lexer common tokens should parse the common tokens 7`] = `
Array [
  Object {
    "indent": 0,
    "raw": "<!-- comment item text -->",
    "type": "comment",
    "value": "comment item text",
  },
]
`;

exports[`lexer common tokens should parse the common tokens 8`] = `
Array [
  Object {
    "alt": "alt text",
    "indent": 0,
    "raw": "![alt text](image.png)",
    "type": "image",
    "url": "image.png",
  },
]
`;

exports[`lexer hr line should parse the hr line 1`] = `
Array [
  Object {
    "type": "hr-line",
  },
]
`;

exports[`lexer italics should be deep tokenized 1`] = `
Array [
  Object {
    "indent": 0,
    "raw": "*italics with \`code\` and ~~strikes~~ and [link](https://kiranparajuli.com.np)*",
    "type": "paragraph",
    "value": "*italics with \`code\` and ~~strikes~~ and [link](https://kiranparajuli.com.np)*",
  },
]
`;

exports[`lexer italics should match the consecutive occurrences 1`] = `
Array [
  Object {
    "indent": 0,
    "raw": "*first italics* *second italics* *third italics*",
    "type": "paragraph",
    "value": "*first italics* *second italics* *third italics*",
  },
]
`;

exports[`lexer link should deep tokenized the link title 1`] = `
Array [
  Object {
    "indent": 0,
    "raw": "[*italic* with **bold** and \`code\`](https://kiranparajuli.com.np)",
    "type": "paragraph",
    "value": "[*italic* with **bold** and \`code\`](https://kiranparajuli.com.np)",
  },
]
`;

exports[`lexer link should match the consecutive occurrences 1`] = `
Array [
  Object {
    "indent": 0,
    "raw": "[link](https://kiranparajuli.com.np) [link](https://kiranparajuli.com.np)",
    "type": "paragraph",
    "value": "[link](https://kiranparajuli.com.np) [link](https://kiranparajuli.com.np)",
  },
]
`;

exports[`lexer list indent should break the list 1`] = `
Array [
  Object {
    "checkList": false,
    "indent": 2,
    "items": Array [
      Object {
        "countText": "-",
        "raw": "  - item **1**",
        "type": "count-item",
        "value": "item **1**",
      },
      Object {
        "countText": "-",
        "raw": "  - item [link](link-url)",
        "type": "count-item",
        "value": "item [link](link-url)",
      },
    ],
    "ordered": false,
    "type": "list",
  },
  Object {
    "checkList": false,
    "indent": 0,
    "items": Array [
      Object {
        "countText": "-",
        "raw": "- item 3 \`code item\`",
        "type": "count-item",
        "value": "item 3 \`code item\`",
      },
      Object {
        "countText": "-",
        "raw": "- item 4",
        "type": "count-item",
        "value": "item 4",
      },
    ],
    "ordered": false,
    "type": "list",
  },
]
`;

exports[`lexer list should tokenize a valid ordered list 1`] = `
Array [
  Object {
    "checkList": false,
    "indent": 0,
    "items": Array [
      Object {
        "countText": "1.",
        "raw": "1. item **1**",
        "type": "count-item",
        "value": "item **1**",
      },
      Object {
        "countText": "1.",
        "raw": "1. item [link](link-url)",
        "type": "count-item",
        "value": "item [link](link-url)",
      },
      Object {
        "countText": "1.",
        "raw": "1. item 3 \`code item\`",
        "type": "count-item",
        "value": "item 3 \`code item\`",
      },
    ],
    "ordered": true,
    "type": "list",
  },
]
`;

exports[`lexer list should tokenize a valid un-ordered list 1`] = `
Array [
  Object {
    "checkList": false,
    "indent": 0,
    "items": Array [
      Object {
        "countText": "-",
        "raw": "- item **1**",
        "type": "count-item",
        "value": "item **1**",
      },
      Object {
        "countText": "-",
        "raw": "- item [link](link-url)",
        "type": "count-item",
        "value": "item [link](link-url)",
      },
      Object {
        "countText": "-",
        "raw": "- item 3 \`code item\`",
        "type": "count-item",
        "value": "item 3 \`code item\`",
      },
    ],
    "ordered": false,
    "type": "list",
  },
]
`;

exports[`lexer list should tokenize list combination 1`] = `
Array [
  Object {
    "checkList": false,
    "indent": 0,
    "items": Array [
      Object {
        "countText": "-",
        "raw": "- one",
        "type": "count-item",
        "value": "one",
      },
      Object {
        "countText": "-",
        "raw": "- two",
        "type": "count-item",
        "value": "two",
      },
    ],
    "ordered": false,
    "type": "list",
  },
  Object {
    "checkList": false,
    "indent": 0,
    "items": Array [
      Object {
        "countText": "1.",
        "raw": "1. one",
        "type": "count-item",
        "value": "one",
      },
      Object {
        "countText": "2.",
        "raw": "2. two",
        "type": "count-item",
        "value": "two",
      },
    ],
    "ordered": true,
    "type": "list",
  },
  Object {
    "checkList": true,
    "indent": 0,
    "items": Array [
      Object {
        "checked": false,
        "countText": "-",
        "raw": "- [ ] c empty",
        "type": "check-item",
        "value": "c empty",
      },
      Object {
        "checked": true,
        "countText": "-",
        "raw": "- [x] c checked",
        "type": "check-item",
        "value": "c checked",
      },
    ],
    "ordered": false,
    "type": "list",
  },
  Object {
    "checkList": true,
    "indent": 0,
    "items": Array [
      Object {
        "checked": false,
        "countText": "1.",
        "raw": "1. [ ] c empty",
        "type": "check-item",
        "value": "c empty",
      },
      Object {
        "checked": true,
        "countText": "1.",
        "raw": "1. [x] c checked",
        "type": "check-item",
        "value": "c checked",
      },
    ],
    "ordered": true,
    "type": "list",
  },
]
`;

exports[`lexer paragraph should be deep tokenized 1`] = `
Array [
  Object {
    "indent": 0,
    "raw": "some normal and **bold with * gem** but pure *italics* is alos there baby now ~~coming~~hola amigons~~strike~~ wooo lala what about blazing *********here baby ~~~~~~~~~baby \`baby\`\`\`[[[[[[[[[[[[[[[l]]]]int](href)[link](href)\`\`\`\`\`\`\`\`\`\`",
    "type": "paragraph",
    "value": "some normal and **bold with * gem** but pure *italics* is alos there baby now ~~coming~~hola amigons~~strike~~ wooo lala what about blazing *********here baby ~~~~~~~~~baby \`baby\`\`\`[[[[[[[[[[[[[[[l]]]]int](href)[link](href)\`\`\`\`\`\`\`\`\`\`",
  },
]
`;

exports[`lexer paragraph should be deep tokenized 2`] = `
Array [
  Object {
    "indent": 0,
    "raw": "a paragraph of <u>words</u> \`first code\` normal text here \`code body\` *first italics* here me crying *italic body* here me crying **first bolds** some normal again **bold body** [Kiran Parajuli](https://kiranparajuli.com.np) ~~strikes body~~ here some",
    "type": "paragraph",
    "value": "a paragraph of <u>words</u> \`first code\` normal text here \`code body\` *first italics* here me crying *italic body* here me crying **first bolds** some normal again **bold body** [Kiran Parajuli](https://kiranparajuli.com.np) ~~strikes body~~ here some",
  },
]
`;

exports[`lexer paragraph should be deep tokenized 3`] = `
Array [
  Object {
    "indent": 0,
    "raw": "now with __underlined text__ within some ___underl_ined_text___",
    "type": "paragraph",
    "value": "now with __underlined text__ within some ___underl_ined_text___",
  },
]
`;

exports[`lexer quote should deep tokenize quote with multiple depth 1`] = `
Array [
  Object {
    "depth": 1,
    "indent": 0,
    "raw": "> > quote **one** with *two*",
    "type": "quote",
    "value": "quote **one** with *two*",
  },
]
`;

exports[`lexer quote should deep tokenize quote with multiple depth 2`] = `
Array [
  Object {
    "depth": 2,
    "indent": 2,
    "raw": "  > > > quote \`four\` with ~~five~~",
    "type": "quote",
    "value": "quote \`four\` with ~~five~~",
  },
]
`;

exports[`lexer quote should deep tokenize quote with multiple depth 3`] = `
Array [
  Object {
    "depth": 3,
    "indent": 0,
    "raw": "> > > > quote [link-title](link-url) with *two*",
    "type": "quote",
    "value": "quote [link-title](link-url) with *two*",
  },
]
`;

exports[`lexer quote should deep tokenize quote with zero depth 1`] = `
Array [
  Object {
    "depth": 0,
    "indent": 0,
    "raw": "> quote **one** with *two*",
    "type": "quote",
    "value": "quote **one** with *two*",
  },
]
`;

exports[`lexer quote should deep tokenize quote with zero depth 2`] = `
Array [
  Object {
    "depth": 0,
    "indent": 2,
    "raw": "  > quote \`four\` with ~~five~~",
    "type": "quote",
    "value": "quote \`four\` with ~~five~~",
  },
]
`;

exports[`lexer quote should deep tokenize quote with zero depth 3`] = `
Array [
  Object {
    "depth": 0,
    "indent": 0,
    "raw": "> quote [link-title](link-url) with *two*",
    "type": "quote",
    "value": "quote [link-title](link-url) with *two*",
  },
]
`;

exports[`lexer should tokenize a markdown content 1`] = `
Array [
  Object {
    "indent": 0,
    "raw": "<!-- https://regex101.com/r/C6SxZH/1 -->",
    "type": "comment",
    "value": "https://regex101.com/r/C6SxZH/1",
  },
  Object {
    "type": "new-line",
  },
  Object {
    "indent": 0,
    "level": 1,
    "raw": "# Heading One \`bold inside\`",
    "type": "heading",
    "value": "Heading One \`bold inside\`",
  },
  Object {
    "indent": 0,
    "level": 2,
    "raw": "## Heading Two",
    "type": "heading",
    "value": "Heading Two",
  },
  Object {
    "indent": 0,
    "level": 3,
    "raw": "### Heading Three",
    "type": "heading",
    "value": "Heading Three",
  },
  Object {
    "indent": 0,
    "level": 4,
    "raw": "#### Heading Four",
    "type": "heading",
    "value": "Heading Four",
  },
  Object {
    "indent": 0,
    "level": 5,
    "raw": "##### Heading Five",
    "type": "heading",
    "value": "Heading Five",
  },
  Object {
    "indent": 0,
    "level": 6,
    "raw": "###### Heading Six",
    "type": "heading",
    "value": "Heading Six",
  },
  Object {
    "type": "new-line",
  },
  Object {
    "indent": 0,
    "raw": "a paragraph of words \`first code\` normal text here \`code body\` *first italics* here me crying *italic body* here me crying **first bolds** some normal again **bold body** [Kiran Parajuli](https://kiranparajuli.com.np) ~~strikes body~~ here some normal again at the last",
    "type": "paragraph",
    "value": "a paragraph of words \`first code\` normal text here \`code body\` *first italics* here me crying *italic body* here me crying **first bolds** some normal again **bold body** [Kiran Parajuli](https://kiranparajuli.com.np) ~~strikes body~~ here some normal again at the last",
  },
  Object {
    "type": "new-line",
  },
  Object {
    "depth": 0,
    "indent": 0,
    "raw": "> some quote with <u>Underline</u>",
    "type": "quote",
    "value": "some quote with <u>Underline</u>",
  },
  Object {
    "type": "new-line",
  },
  Object {
    "checkList": false,
    "indent": 0,
    "items": Array [
      Object {
        "countText": "-",
        "raw": "- list item 1",
        "type": "count-item",
        "value": "list item 1",
      },
      Object {
        "countText": "-",
        "raw": "- list item 2",
        "type": "count-item",
        "value": "list item 2",
      },
    ],
    "ordered": false,
    "type": "list",
  },
  Object {
    "checkList": true,
    "indent": 0,
    "items": Array [
      Object {
        "checked": false,
        "countText": "-",
        "raw": "- [ ] checkbox empty",
        "type": "check-item",
        "value": "checkbox empty",
      },
      Object {
        "checked": true,
        "countText": "-",
        "raw": "- [x] checkbox checked",
        "type": "check-item",
        "value": "checkbox checked",
      },
    ],
    "ordered": false,
    "type": "list",
  },
  Object {
    "indent": 4,
    "raw": "    paragraph just below hmm, but with some indentation",
    "type": "paragraph",
    "value": "paragraph just below hmm, but with some indentation",
  },
  Object {
    "type": "new-line",
  },
  Object {
    "depth": 0,
    "indent": 0,
    "raw": "> quote 1",
    "type": "quote",
    "value": "quote 1",
  },
  Object {
    "depth": 1,
    "indent": 0,
    "raw": "> > nested quote 2 [quote-link](quote-link-url)",
    "type": "quote",
    "value": "nested quote 2 [quote-link](quote-link-url)",
  },
  Object {
    "depth": 2,
    "indent": 0,
    "raw": "> > > nested quote 3 with *italics* and **bolds**",
    "type": "quote",
    "value": "nested quote 3 with *italics* and **bolds**",
  },
  Object {
    "type": "new-line",
  },
  Object {
    "indent": 0,
    "language": "js",
    "type": "code-block",
    "value": "const a = 1;
const b = 1;
const c = a + b;

if (c === 2) {
  console.log('success');
} else {
  console.log('failure');
}",
  },
  Object {
    "indent": 2,
    "raw": "  some line with small space ahead",
    "type": "paragraph",
    "value": "some line with small space ahead",
  },
  Object {
    "type": "new-line",
  },
  Object {
    "indent": 0,
    "language": "js",
    "type": "code-block",
    "value": "",
  },
  Object {
    "type": "new-line",
  },
  Object {
    "indent": 0,
    "raw": "some piece of normal paragraph with <u>underlined text</u>",
    "type": "paragraph",
    "value": "some piece of normal paragraph with <u>underlined text</u>",
  },
  Object {
    "type": "new-line",
  },
  Object {
    "indent": 0,
    "language": null,
    "type": "code-block",
    "value": "another code block is here",
  },
  Object {
    "type": "new-line",
  },
  Object {
    "alt": "Kiran Parajuli",
    "indent": 0,
    "raw": "![Kiran Parajuli](https://avatars.githubusercontent.com/u/39373750?v=4)",
    "type": "image",
    "url": "https://avatars.githubusercontent.com/u/39373750?v=4",
  },
  Object {
    "type": "new-line",
  },
  Object {
    "indent": 0,
    "raw": "some random text",
    "type": "paragraph",
    "value": "some random text",
  },
  Object {
    "type": "new-line",
  },
  Object {
    "indent": 0,
    "rows": Array [
      Array [
        Object {
          "raw": " column 1   ",
          "value": "column 1",
        },
        Object {
          "raw": " column 2          ",
          "value": "column 2",
        },
        Object {
          "raw": " column 3   ",
          "value": "column 3",
        },
      ],
      Array [
        Object {
          "raw": " r1 text c1 ",
          "value": "r1 text c1",
        },
        Object {
          "raw": " r1 <u>text</u> c2 ",
          "value": "r1 <u>text</u> c2",
        },
        Object {
          "raw": " r1 text c3 ",
          "value": "r1 text c3",
        },
      ],
      Array [
        Object {
          "raw": " r2 text c1 ",
          "value": "r2 text c1",
        },
        Object {
          "raw": " r2 __text__ c2    ",
          "value": "r2 __text__ c2",
        },
        Object {
          "raw": " r2 text c3 ",
          "value": "r2 text c3",
        },
      ],
      Array [
        Object {
          "raw": " r3 text c1 ",
          "value": "r3 text c1",
        },
        Object {
          "raw": " r3 **text** c2    ",
          "value": "r3 **text** c2",
        },
        Object {
          "raw": " r3 text c3 ",
          "value": "r3 text c3",
        },
      ],
      Array [
        Object {
          "raw": " r4 text c1 ",
          "value": "r4 text c1",
        },
        Object {
          "raw": " r4 *text* c2      ",
          "value": "r4 *text* c2",
        },
        Object {
          "raw": " r5 text c3 ",
          "value": "r5 text c3",
        },
      ],
      Array [
        Object {
          "raw": " r6 text c1 ",
          "value": "r6 text c1",
        },
        Object {
          "raw": " r6 ~~text~~ c2    ",
          "value": "r6 ~~text~~ c2",
        },
        Object {
          "raw": " r6 text c3 ",
          "value": "r6 text c3",
        },
      ],
    ],
    "type": "table",
  },
  Object {
    "indent": 0,
    "raw": "some random text again just below table| abc | def ||---|---|",
    "type": "paragraph",
    "value": "some random text again just below table| abc | def ||---|---|",
  },
  Object {
    "type": "new-line",
  },
  Object {
    "indent": 0,
    "raw": "text text text **bold *with* \`gems\` [ruby](treasure-chest) ~~please~~** text text texttext text text *italics \`with\` [gems](ruby) ~~please~~* text text texttext text text ~~strikes *with* \`gems\` **ruby** [gold](no-sparkle)~~ text text texttext __text **text** \`text\` *text* [te](xt) text__ text",
    "type": "paragraph",
    "value": "text text text **bold *with* \`gems\` [ruby](treasure-chest) ~~please~~** text text texttext text text *italics \`with\` [gems](ruby) ~~please~~* text text texttext text text ~~strikes *with* \`gems\` **ruby** [gold](no-sparkle)~~ text text texttext __text **text** \`text\` *text* [te](xt) text__ text",
  },
  Object {
    "type": "new-line",
  },
  Object {
    "indent": 0,
    "raw": "[*bold* and \`gem\`ss](ruby) and some text",
    "type": "paragraph",
    "value": "[*bold* and \`gem\`ss](ruby) and some text",
  },
  Object {
    "type": "new-line",
  },
]
`;

exports[`lexer strikes should be deep tokenized 1`] = `
Array [
  Object {
    "indent": 0,
    "raw": "~~strikes with ~ gem and \`code\` and **bold** and *italics* and [link](https://kiranparajuli.com.np)~~",
    "type": "paragraph",
    "value": "~~strikes with ~ gem and \`code\` and **bold** and *italics* and [link](https://kiranparajuli.com.np)~~",
  },
]
`;

exports[`lexer strikes should match the consecutive occurrences 1`] = `
Array [
  Object {
    "indent": 0,
    "raw": "~~first strikes~~ ~~second strikes~~ ~~third strikes~~",
    "type": "paragraph",
    "value": "~~first strikes~~ ~~second strikes~~ ~~third strikes~~",
  },
]
`;

exports[`lexer table is not a table false separator 1`] = `
Array [
  Object {
    "indent": 0,
    "rows": Array [
      Array [
        Object {
          "raw": " column 1 ",
          "value": "column 1",
        },
        Object {
          "raw": " column 2 ",
          "value": "column 2",
        },
      ],
      Array [
        Object {
          "raw": " row 1 c1 ",
          "value": "row 1 c1",
        },
        Object {
          "raw": " row 1 c2 ",
          "value": "row 1 c2",
        },
      ],
    ],
    "type": "table",
  },
]
`;

exports[`lexer table is not a table only header 1`] = `
Array [
  Object {
    "indent": 0,
    "raw": "| column 1 | column 2 |",
    "type": "paragraph",
    "value": "| column 1 | column 2 |",
  },
]
`;

exports[`lexer table is not a table only header and separator 1`] = `
Array [
  Object {
    "indent": 0,
    "raw": "| column 1 | column 2 ||---|---|",
    "type": "paragraph",
    "value": "| column 1 | column 2 ||---|---|",
  },
]
`;

exports[`lexer table is not a table other tokens in between 1 1`] = `
Array [
  Object {
    "indent": 0,
    "raw": "| column 1 | column 2 |",
    "type": "paragraph",
    "value": "| column 1 | column 2 |",
  },
  Object {
    "type": "new-line",
  },
  Object {
    "indent": 0,
    "raw": "|---|---|| row 1 c1 | row 1 c2 |",
    "type": "paragraph",
    "value": "|---|---|| row 1 c1 | row 1 c2 |",
  },
]
`;

exports[`lexer table is not a table other tokens in between 2 1`] = `
Array [
  Object {
    "indent": 0,
    "raw": "| column 1 | column 2 ||---|---|",
    "type": "paragraph",
    "value": "| column 1 | column 2 ||---|---|",
  },
  Object {
    "type": "new-line",
  },
  Object {
    "indent": 0,
    "raw": "| row 1 c1 | row 1 c2 |",
    "type": "paragraph",
    "value": "| row 1 c1 | row 1 c2 |",
  },
]
`;

exports[`lexer table is not a table other tokens in between 3 1`] = `
Array [
  Object {
    "indent": 0,
    "rows": Array [
      Array [
        Object {
          "raw": " column 1 ",
          "value": "column 1",
        },
        Object {
          "raw": " column 2 ",
          "value": "column 2",
        },
      ],
      Array [
        Object {
          "raw": " row 1 c1 ",
          "value": "row 1 c1",
        },
        Object {
          "raw": " row 1 c2 ",
          "value": "row 1 c2",
        },
      ],
    ],
    "type": "table",
  },
  Object {
    "type": "new-line",
  },
  Object {
    "indent": 0,
    "raw": "| row 2 c1 | row 2 c2 |",
    "type": "paragraph",
    "value": "| row 2 c1 | row 2 c2 |",
  },
]
`;

exports[`lexer table table cell count cell count should break the table 1 1`] = `
Array [
  Object {
    "indent": 0,
    "rows": Array [
      Array [
        Object {
          "raw": " column 1 ",
          "value": "column 1",
        },
        Object {
          "raw": " column 2 ",
          "value": "column 2",
        },
      ],
      Array [
        Object {
          "raw": " row 1 c1 ",
          "value": "row 1 c1",
        },
        Object {
          "raw": " row 1 c2 ",
          "value": "row 1 c2",
        },
      ],
    ],
    "type": "table",
  },
  Object {
    "indent": 0,
    "raw": "| row 2 c1 |",
    "type": "paragraph",
    "value": "| row 2 c1 |",
  },
]
`;

exports[`lexer table table cell count cell count should break the table 2 1`] = `
Array [
  Object {
    "indent": 0,
    "rows": Array [
      Array [
        Object {
          "raw": " column 1 ",
          "value": "column 1",
        },
        Object {
          "raw": " column 2 ",
          "value": "column 2",
        },
      ],
      Array [
        Object {
          "raw": " row 1 c1 ",
          "value": "row 1 c1",
        },
        Object {
          "raw": " row 1 c2 ",
          "value": "row 1 c2",
        },
      ],
    ],
    "type": "table",
  },
  Object {
    "indent": 0,
    "rows": Array [
      Array [
        Object {
          "raw": " column 1 ",
          "value": "column 1",
        },
      ],
      Array [
        Object {
          "raw": " row 1 c1 ",
          "value": "row 1 c1",
        },
      ],
    ],
    "type": "table",
  },
]
`;

exports[`lexer table table heading-body separator should parse a table 1`] = `
Array [
  Object {
    "indent": 0,
    "rows": Array [
      Array [
        Object {
          "raw": " column 1 ",
          "value": "column 1",
        },
        Object {
          "raw": " column 2 ",
          "value": "column 2",
        },
      ],
      Array [
        Object {
          "raw": " row 1 c1 ",
          "value": "row 1 c1",
        },
        Object {
          "raw": " row 1 c2 ",
          "value": "row 1 c2",
        },
      ],
      Array [
        Object {
          "raw": " row 2 c1 ",
          "value": "row 2 c1",
        },
        Object {
          "raw": " row 2 c2 ",
          "value": "row 2 c2",
        },
      ],
    ],
    "type": "table",
  },
]
`;

exports[`lexer table table heading-body separator should parse a table 2`] = `
Array [
  Object {
    "indent": 0,
    "rows": Array [
      Array [
        Object {
          "raw": " column 1 ",
          "value": "column 1",
        },
        Object {
          "raw": " column 2 ",
          "value": "column 2",
        },
      ],
      Array [
        Object {
          "raw": " row 1 c1 ",
          "value": "row 1 c1",
        },
        Object {
          "raw": " row 1 c2 ",
          "value": "row 1 c2",
        },
      ],
      Array [
        Object {
          "raw": " row 2 c1 ",
          "value": "row 2 c1",
        },
        Object {
          "raw": " row 2 c2 ",
          "value": "row 2 c2",
        },
      ],
    ],
    "type": "table",
  },
]
`;

exports[`lexer table table indent different indent header -> separator 1`] = `
Array [
  Object {
    "indent": 0,
    "raw": "| column 1 | column 2 |  |---|---|| row 1 c1 | row 1 c2 |",
    "type": "paragraph",
    "value": "| column 1 | column 2 ||---|---|| row 1 c1 | row 1 c2 |",
  },
]
`;

exports[`lexer table table indent different indent header, separator -> body row 1`] = `
Array [
  Object {
    "indent": 2,
    "raw": "  | column 1 | column 2 |  |---|---|| row 1 c1 | row 1 c2 |",
    "type": "paragraph",
    "value": "| column 1 | column 2 ||---|---|| row 1 c1 | row 1 c2 |",
  },
]
`;

exports[`lexer table table indent indent should break the table 1 1`] = `
Array [
  Object {
    "indent": 2,
    "rows": Array [
      Array [
        Object {
          "raw": " column 1 ",
          "value": "column 1",
        },
        Object {
          "raw": " column 2 ",
          "value": "column 2",
        },
      ],
      Array [
        Object {
          "raw": " row 1 c1 ",
          "value": "row 1 c1",
        },
        Object {
          "raw": " row 1 c2 ",
          "value": "row 1 c2",
        },
      ],
    ],
    "type": "table",
  },
  Object {
    "indent": 0,
    "raw": "| row 2 c1 | row 2 c2 |",
    "type": "paragraph",
    "value": "| row 2 c1 | row 2 c2 |",
  },
]
`;

exports[`lexer table table indent indent should break the table 2 1`] = `
Array [
  Object {
    "indent": 2,
    "rows": Array [
      Array [
        Object {
          "raw": " column 1 ",
          "value": "column 1",
        },
        Object {
          "raw": " column 2 ",
          "value": "column 2",
        },
      ],
      Array [
        Object {
          "raw": " row 1 c1 ",
          "value": "row 1 c1",
        },
        Object {
          "raw": " row 1 c2 ",
          "value": "row 1 c2",
        },
      ],
    ],
    "type": "table",
  },
  Object {
    "indent": 0,
    "rows": Array [
      Array [
        Object {
          "raw": " column 1 ",
          "value": "column 1",
        },
        Object {
          "raw": " column 2 ",
          "value": "column 2",
        },
      ],
      Array [
        Object {
          "raw": " row 1 c1 ",
          "value": "row 1 c1",
        },
        Object {
          "raw": " row 1 c2 ",
          "value": "row 1 c2",
        },
      ],
    ],
    "type": "table",
  },
]
`;

exports[`lexer table table indent the indented table 1`] = `
Array [
  Object {
    "indent": 2,
    "rows": Array [
      Array [
        Object {
          "raw": " column 1 ",
          "value": "column 1",
        },
        Object {
          "raw": " column 2 ",
          "value": "column 2",
        },
      ],
      Array [
        Object {
          "raw": " row 1 c1 ",
          "value": "row 1 c1",
        },
        Object {
          "raw": " row 1 c2 ",
          "value": "row 1 c2",
        },
      ],
    ],
    "type": "table",
  },
]
`;
